--- a/css/Content.css
+++ b/css/Content.css
@@ -1,18 +1,18 @@
 .demo-ribbon {
   width: 100%;
-  height: 40vh;
+  height: 20vh;
   background: #99ccff; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left top, #9966ff, #ff99ff); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(bottom right, #9966ff, #ff99ff); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(bottom right, #9966ff, #ff99ff); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to bottom right, #9966ff, #ff99ff); /* Standard syntax */
+  background: -webkit-linear-gradient(left top, #d74b00, #ff7a33); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #d74b00, #ff7a33); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #d74b00, #ff7a33); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #d74b00, #ff7a33); /* Standard syntax */
   -webkit-flex-shrink: 0;
       -ms-flex-negative: 0;
           flex-shrink: 0;
 }
 
 .demo-main {
-  margin-top: -35vh;
+  margin-top: -15vh;
   -webkit-flex-shrink: 0;
       -ms-flex-negative: 0;
           flex-shrink: 0;
